@@ -3149,6 +3149,11 @@ and are only documented here for completeness:
 
   Sets the system clipboard text from a CP437 string.
 
+* ``dfhack.internal.setClipboardTextCp437Multiline(text)``
+
+  Sets the system clipboard text from a CP437 string. Character 0x10 is
+  interpreted as a newline instead of the usual CP437 glyph.
+
 * ``dfhack.internal.getSuppressDuplicateKeyboardEvents()``
 * ``dfhack.internal.setSuppressDuplicateKeyboardEvents(suppress)``
 
